--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -14,8 +14,7 @@
         app:destination="@id/nodeFragment" >
         <argument
             android:name="Node"
-            app:argType="com.seytkalievm.denettesttree.data.model.Node"
-            app:nullable="true"
-            android:defaultValue="@null" />
+            app:argType="string"
+            android:defaultValue="null" />
     </action>
 </navigation>
