--- a/app/src/main/res/layout/node_child_item_view.xml
+++ b/app/src/main/res/layout/node_child_item_view.xml
@@ -7,17 +7,33 @@
     android:layout_marginVertical="4dp"
     app:cardCornerRadius="8dp">
 
-    <TextView
-        android:id="@+id/child_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/child_name"
+        android:orientation="horizontal">
 
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginHorizontal="16dp"
-        android:layout_marginVertical="12dp"/>
+        <TextView
+            android:id="@+id/child_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="@string/child_name"
+            android:layout_weight="1"
+            android:layout_gravity="center"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginHorizontal="16dp"/>
+
+        <ImageButton
+            android:background="@color/white"
+            android:id="@+id/delete_button"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:tint="@color/red"
+            app:srcCompat="@drawable/baseline_delete_24"
+            android:contentDescription="@string/delete_child_node" />
+
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
