--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -6,7 +6,7 @@
     app:startDestination="@id/nodeFragment">
     <fragment
         android:id="@+id/nodeFragment"
-        android:name="com.seytkalievm.denettesttree.presentation.node.NodeFragment"
+        android:name="com.seytkalievm.denettesttree.presentation.node_fragment.NodeFragment"
         tools:layout="@layout/fragment_node" />
     <action
         android:id="@+id/action_global_nodeFragment"
